add view (class 23)
