# ginchat/docs/swagger.yaml
@@ -25,6 +25,15 @@ paths:
             type: string
       tags:
       - 首页
+  /toRegister:
+    get:
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      tags:
+      - 注册
   /user/createUser:
     post:
       description: insert a user data into database
@@ -54,7 +63,7 @@ paths:
         type: string
       responses:
         "200":
-          description: message", "data"}
+          description: code", "message", "data"}
           schema:
             type: string
       summary: Create a new user
@@ -71,24 +80,13 @@ paths:
         type: integer
       responses:
         "200":
-          description: message", "data"}
+          description: code", "message", "data"}
           schema:
             type: string
       summary: Delete a user
       tags:
       - 用户删除
-  /user/getUserList:
-    get:
-      description: get all user messages in database
-      responses:
-        "200":
-          description: code", "data"}
-          schema:
-            type: string
-      summary: List Users
-      tags:
-      - 用户服务
-  /user/loginUserByNameAndPassword:
+  /user/findUserByNameAndPassword:
     post:
       description: get a user messages from database
       parameters:
@@ -104,10 +102,21 @@ paths:
         type: string
       responses:
         "200":
-          description: message", "data"}
+          description: code", "message", "data"}
           schema:
             type: string
       summary: Get User message by name and password
+      tags:
+      - 用户服务
+  /user/getUserList:
+    get:
+      description: get all user messages in database
+      responses:
+        "200":
+          description: code", "data"}
+          schema:
+            type: string
+      summary: List Users
       tags:
       - 用户服务
   /user/updateUser:
@@ -137,7 +146,7 @@ paths:
         type: string
       responses:
         "200":
-          description: message", "data"}
+          description: code", "message", "data"}
           schema:
             type: string
       summary: Update user message
